[package]
name = "pallet-settlement-fflonk"
version = "0.1.0"
description = "A fflonk verifier pallet."
authors.workspace = true
homepage.workspace = true
edition.workspace = true
publish = false
repository.workspace = true
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
hex-literal = { version = "0.4.1", optional = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

# Pallet specific
fflonk_verifier = { git = "https://github.com/HorizenLabs/fflonk_verifier.git", default-features = false, tag = "v0.3.0" }
log = "0.4.20"
sp-std = { workspace = true }
hp-poe = { default-features = false, workspace = true }

[dev-dependencies]
serde = { version = "1.0.188" }
hex-literal = { version = "0.4.1" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"dep:hex-literal",
]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"fflonk_verifier/std",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime"]
