[package]
name = "pallet-settlement-risc0"
version = "0.1.0"
description = "A risc0 verifier pallet."
authors.workspace = true
homepage.workspace = true
edition.workspace = true
publish = false
repository.workspace = true
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
log = "0.4.21"
hex-literal = { version = "0.4.1", optional = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Pallet specific
native = { default-features = false, workspace = true }
hp-poe = { default-features = false, workspace = true }

[dev-dependencies]
serde = { version = "1.0.188" }
hex = { version = "0.4.3" }
hex-literal = { version = "0.4.1" }
rstest.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "dep:hex-literal",
]
std = [
    "codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "native/std",
    "hp-poe/std",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime"]