[package]
name = "pallet-verifiers"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }

log = "0.4.20"

frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

hp-poe = { workspace = true }
hp-verifiers = { workspace = true }
fflonk-verifier = { workspace = true }

[dev-dependencies]
rstest = "0.20.0"
hex-literal = { version = "0.4.1" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "hp-verifiers/std",
    "hp-poe/std",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime"]
