[package]
name = "pallet-verifiers"
description = "Abstract verification pallets and provide the commons extrinsics"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

log = "0.4.20"

frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

hp-poe = { workspace = true }
hp-verifiers = { workspace = true }
pallet-verifiers-macros = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
rstest = { workspace = true }
hex-literal = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "scale-info/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "hp-verifiers/std",
    "hp-poe/std",
]

try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
