[package]
name = "hp-poe"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-inherents = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }

codec = { default-features = false, workspace = true, features = ["derive"] }
snafu = { default-features = false, workspace = true }
async-trait = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "async-trait",
    "codec/std",
    "sp-inherents/std",
    "sp-runtime/std",
    "snafu/std",
    "sp-core/std",
]
