[package]
name = "hp-verifiers"
description = "Abstract verification pallets primitives"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sp-core = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true }
sp-weights = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-weights/std",
    "scale-info/std",
    "sp-core/std",
    "sp-std/std",
]
