[package]
name = "attestation-rpc"
version = "0.1.0"
description = "Add RPC commands to the Attestation pallet - node side"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec                              = { default-features = false, workspace = true }
jsonrpsee                          = { workspace = true, features = ["client-core", "server", "macros"] }

attestation-rpc-runtime-api = { default-features = false, workspace = true }
sp-api                             = { default-features = false, workspace = true }
sp-core                            = { default-features = false, workspace = true }
sp-runtime                         = { default-features = false, workspace = true }
sp-blockchain                      = { workspace = true }
sc-rpc-api                         = { workspace = true }

[features]
default = ["std"]
std = [
    "sp-api/std",
    "attestation-rpc-runtime-api/std"
]

