[package]
name = "generate-bags"
version = "32.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Bag threshold generation script for pallet-bag-list"

[dependencies]
frame-support = { default-features = false, version = "32.0.0" }
frame-election-provider-support = { default-features = false, version = "32.0.0" }
frame-system = { default-features = false, version = "32.0.0" }
pallet-staking = { default-features = false, version = "32.0.0" }
sp-staking = { default-features = false, version = "30.0.0" }

# third party
chrono = { version = "0.4.31" }
num-format = "0.4.3"
