[package]
name = "pallet-foo-verifier"
version = "0.1.0"
description = "A foo verifier pallet"
homepage.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license = "TBD"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.21"
hex-literal = { version = "0.4.1", optional = true }
codec = { workspace = true }
scale-info = { workspace = true }

hp-verifiers = { workspace = true }
pallet-verifiers = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }

foo-verifier = { git = "https://github.com/HorizenLabs/foo-verifier.git", default-features = false, tag = "v0.1.0" }

[dev-dependencies]
hex-literal = { version = "0.4.1" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "frame-support/std",
    "frame-system/std",
    "hp-verifiers/std",
    "pallet-verifiers/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "pallet-verifiers/runtime-benchmarks",
    "dep:hex-literal",
    "dep:sp-runtime",
    "dep:sp-io",
]