[package]
name = "pallet-groth16-verifier"
version = "0.1.0"
description = "A groth16 verifier pallet"
homepage.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hp-verifiers = { workspace = true }
pallet-verifiers = { workspace = true }

ark-groth16 = { version = "0.4.0", default-features = false }
ark-bn254 = { version = "0.4.0", default-features = false, features = [
    "curve",
] }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = [
    "curve",
] }
ark-serialize = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }

codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-runtime = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
rstest_reuse = { workspace = true }
hex-literal = { workspace = true }

[features]
std = [
    "hp-verifiers/std",
    "pallet-verifiers/std",
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-std/std",
    "frame-support/std",
]
default = ["std"]
runtime-benchmarks = [
    "dep:frame-benchmarking",
    "dep:sp-io",
    "dep:sp-runtime",
    "pallet-verifiers/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
