[package]
name = "pallet-groth16-verifier"
version = "0.2.0"
description = "A groth16 verifier pallet"
homepage.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hp-verifiers = { workspace = true }
pallet-verifiers = { workspace = true }

codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-runtime = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }
hp-groth16 = { workspace = true }
native = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
rstest_reuse = { workspace = true }
hex-literal = { workspace = true }
hp-groth16 = { workspace = true, features = ["dummy-circuit"] }
pallet-balances = { workspace = true }

[features]
std = [
    "hp-verifiers/std",
    "pallet-verifiers/std",
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-std/std",
    "frame-support/std",
    "hp-groth16/std",
    "native/std",
    "pallet-balances/std",
]
default = ["std"]
runtime-benchmarks = [
    "dep:frame-benchmarking",
    "dep:sp-io",
    "dep:sp-runtime",
    "pallet-verifiers/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "hp-groth16/dummy-circuit",
]
